--- a/RG_Toolkit/src/components/nav.scss
+++ b/RG_Toolkit/src/components/nav.scss
@@ -12,7 +12,7 @@ Nav {
             a{
                 width: 100%;
                 float: left;
-                padding: 20px;
+                // padding: 20px;
                 color:white;
                 text-decoration: none;
                 cursor: pointer;
